--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
                 <li><a href="javascript:void(0)" id="hackOne">Exploit-1.0</a></li>
                 <li><a href="javascript:void(0)" id="hackTwo">Decrypt-Tool</a></li>
             </ul>
+            <div id="videoContainer" class="hidden">
+                <p class="output">Playing video...</p>
+                <div id="video">
+                    <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                </div>
+            </div>
         </div>
     </div>
     <script src="script.js"></script>
