--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
             <div id="videoContainer" class="hidden">
                 <p class="output">Playing video...</p>
                 <div id="video">
-                    <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                    <video id="rickrollVideo" controls>
+                        <source src="rickroll.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
                 </div>
             </div>
         </div>
