--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                 <p class="output">Playing video...</p>
                 <div id="video">
                     <video id="rickrollVideo" controls>
-                        <source src="rickroll.mp4" type="video/mp4">
-                        Your browser does not support the video tag.
+                        <source src="https://dn720407.ca.archive.org/0/items/rick-roll/Rick%20Roll.mp4" type="video/mp4">
+                        failed to load hacks
                     </video>
                 </div>
             </div>
