--- a/index.html
+++ b/index.html
@@ -10,31 +10,31 @@
     <div class="container">
         <div id="terminal">
             <h1>_WELCOME TO THE TERMINAL</h1>
-            <p class="output">Initializing system...</p>
-            <p class="output">Loading hacks...</p>
-            <p class="output">Establishing secure connection...</p>
-            <p class="output">Connection established. Access granted.</p>
-            <p class="input" data-before="user@hackerspace:~$">cat README.md</p>
-            <p class="output"># Welcome to the Hacker's Terminal</p>
-            <p class="output">Explore the files and tools below:</p>
+            <div class="output">Initializing system...</div>
+            <div class="output">Loading hacks...</div>
+            <div class="output">Establishing secure connection...</div>
+            <div class="output">Connection established. Access granted.</div>
+            <div class="input" data-before="user@hackerspace:~$">cat README.md</div>
+            <div class="output"># Welcome to the Hacker's Terminal</div>
+            <div class="output">Explore the files and tools below:</div>
             <ul class="output">
                 <li><a href="#hacks">Hacks</a></li>
                 <li><a href="#tools">Tools</a></li>
                 <li><a href="#logs">Logs</a></li>
                 <li><a href="#access">Access Points</a></li>
             </ul>
-            <p class="input" data-before="user@hackerspace:~$">explore hacks</p>
-            <p class="output">Hacks initialized...</p>
+            <div class="input" data-before="user@hackerspace:~$">explore hacks</div>
+            <div class="output">Hacks initialized...</div>
             <ul class="output">
                 <li><a href="javascript:void(0)" id="hackOne">Exploit-1.0</a></li>
                 <li><a href="javascript:void(0)" id="hackTwo">Decrypt-Tool</a></li>
             </ul>
             <div id="videoContainer" class="hidden">
-                <p class="output">Playing video...</p>
+                <div class="output">Playing video...</div>
                 <div id="video">
                     <video id="rickrollVideo" controls>
-                        <source src="https://dn720407.ca.archive.org/0/items/rick-roll/Rick%20Roll.mp4" type="video/mp4">
-                        failed to load hacks
+                        <source src="rickroll.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
                     </video>
                 </div>
             </div>
