--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="output">Playing video...</div>
                 <div id="video">
                     <video id="rickrollVideo" controls>
-                        <source src="rickroll.mp4" type="video/mp4">
+                        <source src="https://dn720407.ca.archive.org/0/items/rick-roll/Rick%20Roll.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                 </div>
